Fix Zero Trust dashboard decision mixing, add multi-hierarchy merge with conflict validation, improve role hierarchy UI with real-time client-side cross-validation and Mermaid conflict visualization